--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniels</title>
+    <!-- AOS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!--  -->
     <link rel="icon" href="Images/favicon.ico">
     <!-- Bootstrap -->
     <link rel="stylesheet" href="CSS/bootstrap.min.css">
@@ -17,8 +20,11 @@
 </head>
 <body data-bs-spy="scroll" data-bs-target="#navbar">
 
+    <div class="loading justify-content-center align-items-center">
+      <span class="loader"></span>
+    </div>
     <!-- Navbar -->
-    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-black bg-opacity-50 fixed-top">
+    <nav id="navbar" class="navbar navbar-expand-lg navbar-dark bg-black bg-opacity-25  fixed-top">
         <div class="container-md px-md-5 py-2 text-center">
           <a class="navbar-brand fw-bold" href="#">DANIELS</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,6 +59,9 @@
       </nav>
 
     <!-- header -->
+    <div class="iconnn">
+      <i class="fas fa-angle-up"></i>
+    </div>
     <header class="home vh-100" id="home">
         <div class="container d-flex justify-content-center align-items-center text-center w-100 h-100 text-white">
             <div class="text">
@@ -81,12 +90,12 @@
     <section id="about" class="about">
         <div class="container my-5">
             <div class="row my-5  py-4">
-                <div class="col-md-5 ps-1  ">
+                <div class="col-md-5 ps-1  " data-aos="fade-right" data-aos-duration="3000">
                     <div class="image  position-relative">
                         <img src="Images/hero.jpg" class="w-100 ps-4" alt="">
                     </div>
                 </div>
-                <div class="col-md-7 py-4 pe-5 mt-sm-4 mt-md-0 ">  
+                <div class="col-md-7 py-4 pe-5 mt-sm-4 mt-md-0 " data-aos="fade-left" data-aos-duration="3000">  
                     <h3 class="fw-bold fs-3 pb-0 mb-0 ">About Me.</h3>
                     <span class="spann d-inline-block">UI / UX DESIGNER & WEB DEVELOPER</span>
                     <p class=" jerry pt-3 pb-3">I am <span class="fw-bold">Jerry Daniels</span> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever It has survived not only five centuries, but also the leap into electronic but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing</p>
@@ -528,7 +537,7 @@
         </div>
         </div>
         <div class="row px-5 mt-3">
-          <div class="  col-md-4 text-center text-white mb-5 mb-md-0">
+          <div class="  col-md-4 text-center text-white mb-5 mb-md-0" data-aos="fade-up" data-aos-duration="1500">
           <div class=" team-member resize ">
               <div class="image position-relative">
                 <img src="Images/1.jpg " class="w-100" alt="">
@@ -555,7 +564,7 @@
               </div>
             </div>
           </div>
-          <div class="  col-md-4 text-center text-white mb-5 mb-md-0">
+          <div class="  col-md-4 text-center text-white mb-5 mb-md-0" data-aos="fade-down" data-aos-duration="1500">
           <div class=" team-member resize ">
               <div class="image position-relative">
                 <img src="Images/2.jpg " class="w-100" alt="">
@@ -582,7 +591,7 @@
               </div>
             </div>
           </div>
-          <div class="  col-md-4 text-center text-white mb-5 mb-md-0">
+          <div class="  col-md-4 text-center text-white mb-5 mb-md-0" data-aos="fade-up" data-aos-duration="1500">
           <div class=" team-member resize ">
               <div class="image position-relative">
                 <img src="Images/1.jpg " class="w-100" alt="">
@@ -673,6 +682,9 @@
 
         <p class="my-0" style="color: #748182;font-size: 14px;">Copy Right 2018 © By Daniels All Rights Reserved</p>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
